--- a/css/flexslider.css
+++ b/css/flexslider.css
@@ -4,7 +4,7 @@
  *
  * Copyright 2012 WooThemes
  * Free to use under the GPLv2 and later license.
- * http://www.gnu.org/licenses/gpl-2.0.html
+ * http://www.gnu.org/licenses/gpl-2.0.php
  *
  * Contributing author: Tyler Smith (@mbmufffin)
  * 
